libs/tzapp-ingress/tzapp-v2.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tzapp-v2-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tzapp-v2
    spec:
      containers:
      - name: app-deploy
        image: doohee323/tzapp:0.1
        ports:
        - name: nodejs-port
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: tzapp-v2
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30304
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: tzapp
